--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,2 @@
-nav {
-  background-color: #0077c0;
-  padding: 1rem;
-}
-
-nav a {
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
-}
+@import url("styles/navbar.css");
+@import url("styles/product-overview.css")
