--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,19 @@
-@import url("styles/navbar.css");
-@import url("styles/product-overview.css")
+@import url("styles/product-listing.css");
+@import url("styles/product-overview.css");
+
+body {
+  margin: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+               'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+               sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.site-container {
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
