Add shipping address page
We need the shipping address of our customers to sent their orders to them. For
this reason a shipping address page has been made. A top bar shows the
progress from 'sign-in' to 'place order'.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 @import url("styles/product-listing.css");
 @import url("styles/product-overview.css");
 @import url("styles/sign-in.css");
+@import url("styles/checkout-steps.css");
 
 body {
   margin: 0px;
